Fix: Corrigir configuração Vercel para resolver 404

--- a/OneDrive/Documentos/PROJETOS/efootball-site/vercel.json
+++ b/OneDrive/Documentos/PROJETOS/efootball-site/vercel.json
@@ -1,4 +1,9 @@
 {
+  "functions": {
+    "index.html": {
+      "runtime": "@vercel/static"
+    }
+  },
   "rewrites": [
     {
       "source": "/(.*)",
